feat(front): Create portfolio view

--- a/front/index.html
+++ b/front/index.html
@@ -6,7 +6,7 @@
     <title>Finizens - Prueba Técnica</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="h-screen container mx-auto px-4"></div>
     <script type="module" src="/src/framework/main.ts"></script>
   </body>
 </html>
